# alsdiff

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  alsdiff-worker.js  alsdiff.js  alsdiff.opam  dune-project  index.html
.claude-plugin/: marketplace.json
.github/scripts/: ci-utils.sh
.github/workflows/: build.yml  custom_build.yml  deploy-gh-pages.yml  release.yml
assets/: index-CenxEa8Z.css  index-DuysODXa.js
docs/: catalogo-de-saidas.md  config.schema.json  plano-reordenar-cenas.md  roadmap-subset-transplant-merge.md
lib/base/: diff.ml  dune  file.ml  upath.ml  upath2.ml  xml.ml  xml2.ml
lib/base_io/: base_io.mli  dune
lib/base_io_js/: base_io.ml  dune
lib/base_io_native/: base_io.ml  dune
lib/browser/: alsdiff_browser.ml  dune  main.ml
lib/live/: automation.ml  clip.ml  device.ml  dune  liveset.ml  track.ml
lib/merge/: conflict.ml  dune  merge.ml  patch_compare.ml  xml_compare.ml  xml_merge.ml  xml_merge_fields.ml
lib/merge_tui/: app.ml  dune  keymap.ml  merge_tree.ml  model.ml  msg.ml  update.ml  view.ml
lib/output/: change_projector.ml  change_tree.ml  config.ml  display_context.ml  dot_renderer.ml  dune  flowchart.ml  json_renderer.ml  mermaid_renderer.ml  output_types.ml  presentation_model.ml  stats_renderer.ml  text_renderer.ml  view_model.ml  view_specs.ml
lib/ppx/: dune  ppx_id.ml  ppx_patch.ml  ppx_shared.ml  ppx_view_spec.ml
lib/tui/: app.ml  dune  keymap.ml  model.ml  msg.ml  update.ml  view.ml
lib/view_spec_types/: dune  view_spec_types.ml
plugins/ableton-test-generator/skills/ableton-test-generator/: SKILL.md
plugins/ableton-test-generator/skills/ableton-test-generator/references/: ableton-mcp-tools.md
plugins/generate-changelog/: README.md
plugins/generate-changelog/.claude-plugin/: plugin.json
plugins/generate-changelog/commands/: generate-changelog.md
plugins/generate-changelog/skills/generate-changelog/: SKILL.md
plugins/generate-changelog/skills/generate-changelog/references/: keep_a_changelog.md
plugins/generate-changelog/skills/generate-changelog/scripts/: gen_changelog.py
scripts/: als_reorder.py  als_transplant.py  install-local.sh  setup-git.sh  sync_browser_dist.sh
test/: dune  test_audio_clip.ml  test_audio_track.ml  test_automation.ml  test_clip_patch.ml  test_config_resolution.ml  test_config_text_renderer.ml  test_detail_config_json.ml  test_device.ml  test_diff_audio_clip.ml  test_diff_automation.ml  test_diff_device.ml  test_diff_midi_clip.ml  test_diff_mixer.ml  test_diff_track.ml  test_fade.ml  test_file.ml  test_flowchart_groups.ml  test_group_device.ml  test_group_track.ml  test_ignore_names.ml  test_liveset.ml  test_loop.ml  test_main_track.ml  test_midi_clip.ml  test_midi_note.ml  test_midi_track.ml  test_plugin_device.ml  test_regex_match.ml  test_return_track.ml  test_sample_ref.ml  test_stats_renderer.ml  test_streaming.ml  test_streaming_advanced.ml  test_time_signature.ml  test_track_error_handling.ml  test_track_utils.ml  test_upath.ml  test_upath2.ml  test_upath2_regex.ml  (+6 more)
test/browser/: js_regression_runner.js
test/data/: au_plugin_info.xml  device.xml  fade.xml  group_track.xml  instrument_branch.xml  loop.xml  m4l_audio_device.xml  midi_note.xml  midi_track_session.xml  mixer_device.xml  return_track.xml  sample_ref.xml  t2.xml  time_signature.xml  tmp.xml  vst2_plugin_info.xml  vst3_plugin_info.xml
web/: index.html  package-lock.json  package.json  playwright.config.ts
web/src/: App.tsx  main.tsx  types.ts
web/src/components/: ArrangementView.tsx  AutomationView.tsx  CanvasSurface.tsx  ClipBlock.tsx  ClipDetail.tsx  CollectionList.tsx  DetailView.tsx  DeviceCard.tsx  DeviceChain.tsx  DiffIndicator.tsx  FieldChange.tsx  FileUpload.tsx  Mixer.tsx  PianoRollView.tsx  ResizeHandle.tsx  TrackHeader.tsx  TrackLane.tsx
web/src/lib/: alsdiff-api.ts  automation-events.ts  canvas-utils.ts  diff-parser.ts  hit-testing.ts  midi-notes.ts  time-format.ts  zoom.ts
web/src/lib/renderers/: arrangement-renderer.ts  automation-renderer.ts  piano-roll-renderer.ts
web/src/stores/: diff-store.ts  settings-store.ts
web/src/styles/: arrangement.css  automation.css  detail.css  global.css  piano-roll.css
