(test
 (name test_upath)
 (modules test_upath utils)
 (libraries alsdiff_base alcotest))

(test
 (name test_xml)
 (modules test_xml utils)
 (libraries alsdiff_base alcotest))

(test
 (name test_wildcard)
 (modules test_wildcard utils)
 (libraries alsdiff_base alcotest))

(test
 (name test_complex)
 (modules test_complex utils)
 (libraries alsdiff_base alcotest))

(test
 (name test_diff_list)
 (modules test_diff_list utils)
 (libraries alsdiff_base alcotest))

(test
 (name test_regex_match)
 (modules test_regex_match utils)
 (libraries alsdiff_base alcotest)
 (deps data/regex_match.xml))

;; Tests needing alsdiff_base + alsdiff_live
(test
 (name test_diff_automation)
 (modules test_diff_automation utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/automation.xml data/automation_old.xml))

(test
 (name test_automation)
 (modules test_automation utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/automation.xml))

(test
 (name test_diff_mixer)
 (modules test_diff_mixer utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/mixer.xml data/mixer_old.xml))

(test
 (name test_audio_clip)
 (modules test_audio_clip utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/audio_clip.xml))

(test
 (name test_clip_patch)
 (modules test_clip_patch utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/audio_clip.xml))

(test
 (name test_midi_clip)
 (modules test_midi_clip utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/midi_clip.xml))

(test
 (name test_diff_audio_clip)
 (modules test_diff_audio_clip utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/audio_clip.xml data/audio_clip_old.xml))

(test
 (name test_diff_midi_clip)
 (modules test_diff_midi_clip utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/midi_clip.xml data/midi_clip_old.xml))

(test
 (name test_device)
 (modules test_device utils)
 (libraries alsdiff_base alsdiff_live alcotest))

(test
 (name test_real_devices)
 (modules test_real_devices utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/compressor_device.xml data/eq8_device.xml data/wavetable_device.xml))

(test
 (name test_group_device)
 (modules test_group_device utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/group_device.xml))

(test
 (name test_midi_track)
 (modules test_midi_track utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/midi_track.xml))

(test
 (name test_audio_track)
 (modules test_audio_track utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/audio_track.xml))

(test
 (name test_m4l_device)
 (modules test_m4l_device utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/m4l_device.xml))

(test
 (name test_plugin_device)
 (modules test_plugin_device utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/plugin_device.xml))

(test
 (name test_diff_track)
 (modules test_diff_track utils)
 (libraries alsdiff_base alsdiff_live alcotest))

(test
 (name test_liveset)
 (modules test_liveset utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/t4.xml))

(test
 (name test_main_track)
 (modules test_main_track utils)
 (libraries alsdiff_base alsdiff_live alcotest)
 (deps data/main_track.xml))

;; Test needing only alsdiff_live
(test
 (name test_diff_device)
 (modules test_diff_device utils)
 (libraries alsdiff_live alcotest))

;; Tests needing only alsdiff_output
(test
 (name test_text_renderer)
 (modules test_text_renderer utils)
 (libraries alsdiff_output alcotest))

(test
 (name test_detail_config_json)
 (modules test_detail_config_json utils)
 (libraries alsdiff_output alcotest))

;; Test needing all three libraries
(test
 (name test_view_model)
 (modules test_view_model utils)
 (libraries alsdiff_base alsdiff_live alsdiff_output alcotest))

(test
 (name test_stats_renderer)
 (modules test_stats_renderer)
 (libraries alsdiff_output alcotest))

;; Auto indent files with `dune build @fmt`
(subdir
 run
 (dynamic_include ../rules/dune.ocp-indent))

(subdir
 rules
 (rule
  (deps
   (glob_files ../*.{ml,mli}))
  (target dune.ocp-indent)
  (action
   (run ocp-indent-gen-rules -o %{target}))))
