(library
 (name alsdiff_base)
 (public_name alsdiff.base)
 (modules
   file
   xml
   xml2
   upath
   upath2
   equality
   diff)
 (libraries
   re
   angstrom
   camlzip
   xmlm
   fmt
   ocaml_intrinsics_kernel))

;; Auto indent files with `dune build @fmt`
(subdir
 run
 (dynamic_include ../rules/dune.ocp-indent))

(subdir
 rules
 (rule
  (deps
   (glob_files ../*.{ml,mli}))
  (target dune.ocp-indent)
  (action
   (run ocp-indent-gen-rules -o %{target}))))
