(library
 (name alsdiff_output)
 (public_name alsdiff.output)
 (modules
   output_types
   presentation_model
   display_context
   change_tree
   change_projector
   view_model
   config
   text_renderer
   stats_renderer
  json_renderer
   flowchart
   mermaid_renderer
   dot_renderer)
 (libraries
   alsdiff_base
   alsdiff_live
   ppx_deriving_yojson
   ppx_deriving_jsonschema.runtime
   jsonschema
   fmt
   ptime
   yojson)
 (preprocess (pps ppx_deriving_yojson ppx_deriving_jsonschema)))

;; Auto indent files with `dune build @fmt`
(subdir
 run
 (dynamic_include ../rules/dune.ocp-indent))

(subdir
 rules
 (rule
  (deps
   (glob_files ../*.{ml,mli}))
  (target dune.ocp-indent)
  (action
   (run ocp-indent-gen-rules --ignore=output_types.pp.ml,presentation_model.pp.ml,display_context.pp.ml,change_tree.pp.ml,change_projector.pp.ml,view_model.pp.ml,config.pp.ml,text_renderer.pp.ml,stats_renderer.pp.ml,json_renderer.pp.ml,flowchart.pp.ml,mermaid_renderer.pp.ml,dot_renderer.pp.ml -o %{target}))))
